@@ -32,6 +32,7 @@ exportMethods("DATA<-")
 exportMethods("Data<-")
 exportMethods("[")
 exportMethods("[<-")
+exportMethods("^")
 exportMethods(Data)
 exportMethods(NCOL)
 exportMethods(NROW)
