@@ -1,6 +1,7 @@
 Release 0.2-0:
   * Added rsvd() method.
   * Added rcond() method.
+  * Added "^" method.
 
 Release 0.1-0:
   * Added expand() and collapse().
